QmlJS: Fix crash when reading malformed qmltypes files.

Task-number: QTCREATORBUG-6587
Change-Id: I0b7c65c1d7f613283e447293daf26673e88ba6e7
Reviewed-by: Eike Ziller <eike.ziller@nokia.com>